# Miraheze-Waki285-Bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  IMPORT CHECKLIST.md  compose.yml
.config/: mwbot.toml.example
src/: constants.rs  main.rs  onetime.rs  util.rs
src/tasks/: mod.rs  update_rc.rs
src/tasks/meta/: add_status.rs  clean_sandbox.rs  get_rw_backlog.rs  list_extensions.rs  mod.rs  othergroups.rs  remove_marker.rs  srg_mark_done.rs
src/tasks/test/: list_extensions.rs  mod.rs
src/tasks_onetime/: _import.rs  bt1.rs  bt2.rs  bt3.rs  bt4.rs  bt5.rs  bt6.rs  bt7.rs  mod.rs  temp.rs
