[package]
name = "waki285bot"
version = "0.1.0"
edition = "2021"

default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "onetime"
path = "src/onetime.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mwbot = "0.6.1"
regex = "1.10.5"
tokio = { version = "1.38.1", features = ["full"] }
once_cell = "1.19.0"
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.3"
php-parser-rs = { git = "https://github.com/php-rust-tools/parser", version = "0.1.3" }
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
itertools = "0.13.0"
roxmltree = "=0.1.0"
walkdir = "2.5.0"
visdom = "1.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
#mediawiki_parser = "0.4.2"
#tokio-cron-scheduler = "0.10.0"
